# tallya

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  DESIGN.md  README.md  RELEASE_CHECKLIST.md  TESTING.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: PLAN.md  clarification-options-plan.md  local-gateway-plan.md  responses-streaming-plan.md  review-findings-2026-06-12.md  thread-continuation-plan.md
docs/superpowers/plans/: 2026-06-15-ai-task-background-notifications.md
scripts/: build-frontend.mjs  bump-version.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_http.rs  codex.rs  lib.rs  main.rs  system_proxy.rs
src/components/: tallya-scroll-area.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  dialog.tsx  input.tsx  select.tsx  sonner.tsx  switch.tsx  tooltip.tsx
src/features/work-memory/: constants.ts  daily-memory-repository.test.ts  memory-date-view-model.test.ts  memory-date-view-model.ts  memory-view-model.test.ts  memory-view-model.ts  report-view-model.test.ts  report-view-model.ts  types.ts  window-sizing.test.ts  window-sizing.ts  work-memory-home.test.ts  work-memory-home.tsx
src/lib/: app-version.ts  platform.ts
src/lib/__tests__/: platform.test.ts
src/styles/: globals.css
src/test/: github-workflows.test.ts  react-tree.ts  setup.ts  tauri-mocks.ts
src/test/__tests__/: tauri-mocks.test.ts
(+233 files in other folders)
