[package]
name = "tallya"
version = "0.2.5"
description = "Local-first AI work memory tool"
authors = ["Tallya contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tallya_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7.2"
windows-registry = "0.6.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "s"
